--- a/.github/docker/ubuntu_24_04/Dockerfile
+++ b/.github/docker/ubuntu_24_04/Dockerfile
@@ -11,7 +11,7 @@ ENV WORKON_HOME=/root/venvs
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive TZ=Europe/Berlin apt-get -y install tzdata
 RUN apt-get install -y curl python3 python3-pip python3-venv git-all git cmake \
-            sudo pkg-config python3-virtualenvwrapper python3-numpy
+            sudo pkg-config python3-virtualenvwrapper python3-numpy graphviz graphviz-dev
 
 # Install virtualenvwrapper \
 # and create giskardpy venv
