--- a/.github/workflows/update_docker.yml
+++ b/.github/workflows/update_docker.yml
@@ -33,11 +33,12 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: log into Docker Hub #Set repository secrets in github secrets
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASS }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v5
