--- a/.github/workflows/ci_reusable.yml
+++ b/.github/workflows/ci_reusable.yml
@@ -32,4 +32,4 @@ jobs:
         run: |
           source /opt/ros/overlay_ws/install/setup.bash
           source /opt/ros/cram-env/bin/activate
-          python -m pytest -sv test/${{ inputs.libs }}_test
+          python -m pytest -sv test/${{ inputs.lib }}_test
