--- a/.github/workflows/sdt_self_assessment.yml
+++ b/.github/workflows/sdt_self_assessment.yml
@@ -52,6 +52,7 @@ jobs:
 
       - name: Initialize submodules explicitly
         run: |
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git submodule sync --recursive
           git submodule update --init --recursive
 
