--- a/.github/workflows/ci_reusable.yml
+++ b/.github/workflows/ci_reusable.yml
@@ -43,9 +43,10 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: /github/home/.cache/semantic_digital_twin
-          key: ${{ runner.os }}-cache-${{ github.ref_name }}-${{ github.run_id }}-${{ inputs.lib }}
+          key: ${{ runner.os }}-cache-${{ inputs.lib }}-${{ github.ref_name }}-${{ github.run_id }}
           restore-keys: |
-            ${{ runner.os }}-cache-${{ github.ref_name }}
+            ${{ runner.os }}-cache-${{ inputs.lib }}-${{ github.ref_name }}
+            ${{ runner.os }}-cache-${{ inputs.lib }}
             ${{ runner.os }}-cache-
 
       - name: List files in cache 1
@@ -70,7 +71,7 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: /github/home/.cache/semantic_digital_twin
-          key: ${{ runner.os }}-cache-${{ github.ref_name }}-${{ github.run_id }}-${{ inputs.lib }}
+          key: ${{ runner.os }}-cache-${{ inputs.lib }}-${{ github.ref_name }}-${{ github.run_id }}
 
       - name: List files in cache 2
         run: |
